# pySHACL

./: .dockerignore  .drone.yml  .editorconfig  .flake8  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  FEATURES.md  MANIFEST.in  Makefile  README.md  build-debian-source.txt  debian_changelog.txt  debian_license.txt  main.py  poetry.toml  publish-to-pypi.txt  pyproject.toml  requirements-dev.txt  requirements.txt  secret_key.asc.enc  setup.cfg  setup.py  stdeb.cfg
.github/workflows/: ci.yml  lint_python.yml
benchmarks/: benchmark.py
examples/: advanced.py  example.py  remote_sparql.py  rules_inference.py  sparql_assert_datatype.py  two_file_example.py
hooks/: pre-commit
pyshacl/: __init__.py  __main__.py  cli.py  cli_rules.py  consts.py  entrypoints.py  errors.py  graph_abstraction.py  parameter.py  pyshacl-cli.spec  pytypes.py  rule_expand_runner.py  run_type.py  sh_http.py  shacl-shacl.pickle  shacl_graph.py  shape.py  shapes_graph.py  sparql_query_helper.py  target.py  util.py  validate.py  validator.py  validator_conformance.py
pyshacl/assets/: dash.pickle  dash.ttl  make_builtin.py  schema.pickle  schema.ttl  shacl-shacl.pickle  shacl.pickle  shacl.ttl
pyshacl/constraints/: __init__.py  cardinality_constraints.py  constraint_component.py  logical_constraints.py  other_constraints.py  property_pair_constraints.py  shape_based_constraints.py  sparql_constraints.py  string_based_constraints.py  value_constraints.py  value_range_constraints.py
pyshacl/constraints/advanced/: __init__.py
pyshacl/constraints/core/: cardinality_constraints.py  logical_constraints.py  other_constraints.py  property_pair_constraints.py  shape_based_constraints.py  string_based_constraints.py  value_constraints.py  value_range_constraints.py
pyshacl/constraints/sparql/: sparql_based_constraint_components.py  sparql_based_constraints.py
pyshacl/extras/: __init__.py
pyshacl/extras/js/: __init__.py  constraint.py  constraint_component.py  context.py  function.py  js_executable.py  loader.py  rules.py  target.py
pyshacl/functions/: __init__.py  shacl_function.py
pyshacl/helper/: __init__.py  expression_helper.py  path_helper.py  sparql_query_helper.py
pyshacl/inference/: __init__.py  custom_rdfs_closure.py
pyshacl/monkey/: __init__.py  memory2.py
pyshacl/rdfutil/: __init__.py  clone.py  compare.py  consts.py  graph.py  inoculate.py  load.py  pytypes.py  stringify.py
pyshacl/rules/: __init__.py  shacl_rule.py
pyshacl/rules/sparql/: __init__.py
pyshacl/rules/triple/: __init__.py
test/: __init__.py  helpers.py  implementation_report.py  test_advanced.py  test_cmdline.py  test_cmdline_rules.py  test_dash_validate.py  test_decimals.py  test_extra.py  test_inoculate.py  test_integers.py  test_manual_targeting.py  test_multiple_data_graphs.py  test_rules_oxigraph.py  test_schema_org.py  test_sh_details.py  test_shacl_rules_runner.py  test_sht_validate.py  test_sparql_rule.py  test_validate.py
test/issues/: bad_test_070.py  issue_102.py  test_008.py  test_009.py  test_012.py  test_014.py  test_026.py  test_036.py  test_038.py  test_047.py  test_058.py  test_062.py  test_071.py  test_076.py  test_079.py  test_087.py  test_098.py  test_108.py  test_116.py  test_120.py  test_124.py  test_126.py  test_133.py  test_141.py  test_142.py  test_146.py  test_148.py  test_154.py  test_160.py  test_162.py  test_170.py  test_190.py  test_199.py  test_213.py  test_217.py  test_227.py  test_240.py  test_286.py  test_298.py  test_301.py  (+7 more)
test/issues/test_029/: __init__.py  simpleData.ttl  simpleOnto.ttl
test/issues/test_040/: 03-Network.ttl  __init__.py  sample-network.ttl
test/issues/test_220/: LICENSE.md  __init__.py  kb-REPRODUCTION-1.ttl  kb-REPRODUCTION-2.ttl  owl-REPRODUCTION.ttl  sh-REPRODUCTION-1.ttl  sh-REPRODUCTION-2.ttl
test/issues/test_281/: data.ttl  policies.ttl  test_281.py
test/issues/test_281/policies/: gitlab-policy.ttl
test/js/: test_js_constraint.py  test_js_constraint_component.py  test_js_constraint_path_component.py
test/resources/cmdline_tests/: d1.jsonld  d1.ttl  d2.ttl  o1.ttl  rules_d.ttl  rules_s.ttl  s1.ttl
test/resources/dash_tests/core/complex/: personexample.test.ttl
test/resources/dash_tests/core/misc/: deactivated-002.test.ttl
test/resources/dash_tests/core/node/: and-001.test.ttl  class-001.test.ttl  class-002.test.ttl  hasValue-001.test.ttl  maxInclusive-001.test.ttl  minInclusive-001.test.ttl  node-001.test.ttl  not-002.test.ttl  pattern-001.test.ttl
test/resources/dash_tests/core/path/: path-complex-001.test.ttl  path-sequence-001.test.ttl  path-sequence-duplicate-001.test.ttl
test/resources/dash_tests/core/property/: and-001.test.ttl  datatype-003.test.ttl  disjoint-001.test.ttl  hasValue-001.test.ttl  maxCount-002.test.ttl  maxExclusive-001.test.ttl  minCount-001.test.ttl  node-001.test.ttl  qualifiedValueShape-001.test.ttl  qualifiedValueShapesDisjoint-001.test.ttl  xone-001.test.ttl
test/resources/dash_tests/core/targets/: targetSubjectsOf-002.test.ttl
test/resources/dash_tests/expression/: booleans-001.test.ttl
test/resources/dash_tests/function/: callSPARQLFunction.test.ttl  simpleSPARQLFunction.test.ttl
test/resources/dash_tests/query/: failing-001.test.ttl  failing-002.test.ttl  failing-003.test.ttl  invalid_query.test.ttl  malformed_json.test.ttl  malformed_json_result.test.ttl  passing-001.test.ttl  passing-002.test.ttl
test/resources/dash_tests/rules/sparql/: classify-square.test.ttl
test/resources/dash_tests/shapedefs/: anon-shape-002.test.ttl
test/resources/js/: findBornIn.js  findThings.js  germanLabel.js  hasMaxCount.js  hasMaxLength.js  multiply.js  rectangle.js
test/resources/sht_tests/sparql/: manifest.ttl
test/resources/tests/expression/: booleans-001.test.ttl
test/test_js/: conftest.py  test_js_constraint.py  test_js_constraint_component.py  test_js_constraint_path_component.py  test_js_function.py  test_js_rules.py  test_js_target.py  test_js_target_type.py
tests/: test_validate.py
tests/resources/tests/shapedefs/: anon-shape-001.test.ttl
(+87 files in other folders)
